# python_web_HW_08

./: README.md  pyproject.toml
MongoDB/: models.py  read.py  search_quote.py  seed_data.py
RabbitMQ/: consumer.py  consumer_email.py  consumer_sms.py  producer.py
