[tool.poetry]
name = "learning mongodb"
version = "0.1.0"
description = "learning mongoDB"
authors = ["OleksandrGnatiuk <oleksandr.gnatiuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
